--- a/Server/public/views/searchRecipe.tpl.html
+++ b/Server/public/views/searchRecipe.tpl.html
@@ -8,7 +8,7 @@
         </div>
     </div>
     <div class="row">
-        <div class="col s10 l10 card" id="searchbox">
+        <div class="col s12 m12 l12 card" id="searchbox">
             <div class="col s6 l6">
                 <h4 class="left" translate="SEARCH_FORM_TITLE">Rezeptsuche</h4>
                 <br/>
@@ -60,7 +60,7 @@
                 </ul>
             </div>
         </div>
-
+        <!--Rating options-->
         <div class="col s4" ng-show="searchRecipeCtrl.recipeFilter.showSearchOptions">
             <div class="card searchplus">
                 <h5 translate="SEARCH_RATING_TITLE">Bewertung</h5>
@@ -77,7 +77,7 @@
                 </div>
             </div>
         </div>
-
+        <!--preparing options-->
         <div class="col s4" ng-show="searchRecipeCtrl.recipeFilter.showSearchOptions">
             <div class="card searchplus">
                 <h5 translate="SEARCH_PREP_TIME_TITLE">Zubereitungszeit</h5>
