--- a/scss/fb-styles.scss
+++ b/scss/fb-styles.scss
@@ -197,7 +197,7 @@ body {
 }
 
 
-// ------------------- Login Screen
+// ------------------- Login Screen ----------------*/
 
 
 .fb-layout{
@@ -237,352 +237,361 @@ body {
     }
   }
 }
-/* ----------------VIEW Search Recipe -----*/
+/* ----------------VIEW Search Recipe ----------------*/
 
-    .searchRecipe {
-      background: #F2F2F2;
-      .title-bg {
-        background: $bgcolor-blue;
-        color: #FFF;
-        height: 150px;
-        width: 100%;
-        h3 {
-          font-weight: 100;
-          color: #81d4fa;
-        }
-      }
+.searchRecipe {
+  background: #F2F2F2;
+  .title-bg {
+    background: $bgcolor-blue;
+    color: #FFF;
+    height: 150px;
+    width: 100%;
+    h3 {
+      font-weight: 100;
+      color: #81d4fa;
     }
+  }
+}
 
-    #searchbox {
-      //margin-left: 0.75rem !important;
-      //background: #e6ee9c;
-      min-width: 63%;
-      min-height: 50%;
+#searchbox {
+  //margin-left: 0.75rem !important;
+  //background: #e6ee9c;
+  min-width: 63%;
+  min-height: 50%;
+}
+
+.searchplus {
+  padding: 1rem;
+  min-height: 20rem;
+}
+
+#recipeSearchInput {
+  width: 93%;
+}
+.input-field label{
+  color: #0059bc;
+  &.active{
+    //transform:  translateX(80%) !important;
+    //transform:  translateY(-50%) !important;
+    color: #FFF!important;
+  }
+}
+
+
+.foodcategory ul {
+  padding-left: 2rem;
+  padding-right: 1rem;
+}
+.foodcategory li {
+  display: block;
+  padding-right: 1.5rem;
+}
+
+.find-recipe {
+
+}
+
+/*details*/
+
+.fb-layout-detail {
+  margin: 0 auto;
+  max-width: 1200px;
+  width: 100%;
+}
+
+/*------------ Recipe detail - add & edit ----------------*/
+
+.editRecipe {
+  background: #FFF;
+  .title-bg {
+    background: $bgcolor-blue;
+    color: #FFF;
+    height: 120px;
+    width: 100%;
+    h3 {
+      font-weight: 100;
+      color: #81d4fa;
     }
-
-    .searchplus {
-      padding: 1rem;
-      min-height: 20rem;
+    .ingredient-label .active {
+      color: #F44;
     }
+  }
+  button {
+    background: $secondary-color;
+  }
+  button:hover {
+    background: $success-color-hover;
+  }
 
-    #recipeSearchInput {
-      width: 55%;
-    }
-
-    .foodcategory ul {
-      padding-left: 2rem;
-      padding-right: 1rem;
-    }
-    .foodcategory li {
-      display: block;
-      padding-right: 1.5rem;
-    }
-
-    .find-recipe {
-
-    }
-
-    /*details*/
-
-    .fb-layout-detail {
-      margin: 0 auto;
-      max-width: 1200px;
-      width: 100%;
-    }
-
-    /*------------ Recipe detail - add & edit ----------------*/
-
-    .editRecipe {
-      background: #FFF;
-      .title-bg {
-        background: $bgcolor-blue;
-        color: #FFF;
-        height: 120px;
-        width: 100%;
-        h3 {
-          font-weight: 100;
-          color: #81d4fa;
-        }
-        .ingredient-label .active {
-          color: #F44;
-        }
-      }
-      button {
-        background: $secondary-color;
-      }
-      button:hover {
-        background: $success-color-hover;
-      }
-
-      .input-field label {
-        position: absolute;
-        top: -0.3rem;
-        &.active {
-          font-size: 1.3rem;
-          transform: translateY(-150%), translateX(40%) !important;
-          //transform:  !important;
-          color: $secondary-color;
-        }
-      }
-
-      .btn {
-        background: $secondary-color;
-      }
-      .btn:hover {
-        background: $success-color-hover;
-      }
-      .btn .disabled {
-        background: #F3F3F3;
-      }
-      .btn:focus{
-        border: 1px solid $success-color-hover;
-      }
-      .cancel {
-        margin-right: 1.4rem;
-      }
-      .error {
-        color: $primary-color-dark;
-      }
-      a:focus{
-        border: 1px solid $success-color-hover;
-      }
-    }
-
-    .pixupload {
-      padding: 1rem;
-      button {
-        margin-left: 1rem;
-      }
-    }
-    .img-chooser {
-      border: 1px solid #AA3333;
-      background: $secondary-color;
-    }
-
-    .recipe-img {
-      max-width: 220px;
-      height: auto;
-    }
-
-    .recipe-img-slider {
-      max-width: 100%;
-      height: auto;
-    }
-
-    .img-caption {
-      z-index: 50;
-      background: rgba(22, 22, 22, 0.3);
-      color: $primary-color;
-    }
-
-    .recipe-name {
-      margin-left: 1rem;
-
-    }
-    .form-title {
+  .input-field label {
+    position: absolute;
+    top: -0.3rem;
+    &.active {
+      font-size: 1.3rem;
+      transform: translateY(-150%), translateX(40%) !important;
+      //transform:  !important;
       color: $secondary-color;
     }
+  }
 
-    .recipe-form {
-      //border: 1px solid  #aa3333;
-      padding: 1rem;
-      label:focus {
-        color: $secondary-color-hover;
-      }
+  .btn {
+    background: $secondary-color;
+  }
+  .btn:hover {
+    background: $success-color-hover;
+  }
+  .btn .disabled {
+    background: #F3F3F3;
+  }
+  .btn:focus{
+    border: 1px solid $success-color-hover;
+  }
+  .cancel {
+    margin-right: 1.4rem;
+  }
+  .error {
+    color: $primary-color-dark;
+  }
+  a:focus{
+    border: 1px solid $success-color-hover;
+  }
+}
+
+.pixupload {
+  padding: 1rem;
+  button {
+    margin-left: 1rem;
+  }
+}
+.img-chooser {
+  border: 1px solid #AA3333;
+  background: $secondary-color;
+}
+
+.recipe-img {
+  max-width: 220px;
+  height: auto;
+}
+
+.recipe-img-slider {
+  max-width: 100%;
+  height: auto;
+}
+
+.img-caption {
+  z-index: 50;
+  background: rgba(22, 22, 22, 0.3);
+  color: $primary-color;
+}
+
+.recipe-name {
+  margin-left: 1rem;
+
+}
+.form-title {
+  color: $secondary-color;
+}
+
+.recipe-form {
+  //border: 1px solid  #aa3333;
+  padding: 1rem;
+  label:focus {
+    color: $secondary-color-hover;
+  }
+}
+
+.ingredient-count {
+  max-width: 100px;
+}
+
+.ingredient-kind {
+  max-width: 90%;
+}
+
+.table-ingredients {
+  //generell
+  td {
+    padding: 0 7px 0 7px;
+  }
+
+  // amount
+  td:nth-child(1) {
+    width: 15%;
+  }
+  // unit-of-amount
+  td:nth-child(2) {
+    width: 25%;
+  }
+  // ingredient
+  td:nth-child(3) {
+    width: 55%;
+  }
+  // clear cingredient
+  td:nth-child(4) {
+    width: 5%;
+    color: $secondary-color;
+  }
+
+}
+// UserTEST Learnings: very deleting RED
+.del-ingredient{
+  font-size: 2rem;
+  color: #CC2222;
+  vertical-align: bottom;
+}
+
+
+/*------------ Recipe detail - view -------------------*/
+
+.viewrecipe {
+  background: #FFF;
+  .title-bg {
+    background: $bgcolor-blue;
+    color: #FFF;
+    height: 150px;
+    width: 100%;
+    h3 {
+      font-weight: 100;
+      color: #81d4fa;
     }
-
-    .ingredient-count {
-      max-width: 100px;
-    }
-
-    .ingredient-kind {
-      max-width: 90%;
-    }
-
-    .table-ingredients {
-      //generell
-      td {
-        padding: 0 7px 0 7px;
-      }
-
-      // amount
-      td:nth-child(1) {
-        width: 15%;
-      }
-      // unit-of-amount
-      td:nth-child(2) {
-        width: 25%;
-      }
-      // ingredient
-      td:nth-child(3) {
-        width: 55%;
-      }
-      // clear cingredient
-      td:nth-child(4) {
-        width: 5%;
-        color: $secondary-color;
-      }
+    .input-field label {
+      position: absolute;
+      top: 0.1rem;
 
     }
-    // UserTEST Learnings: very deleting RED
-    .del-ingredient{
-      font-size: 2rem;
-      color: #CC2222;
-      vertical-align: bottom;
+  }
+  .margin-left{
+    margin-left: 1rem;
+  }
+  .card {
+    padding: 0;
+  }
+  .card-title {
+    padding: 15px;
+  }
+  .card-content {
+    line-height: 34px;
+  }
+}
+
+.swiper-container {
+  width: 400px;
+  height: 300px;
+}
+
+/*--------------------- user-details ---------------*/
+
+.user-details {
+  background: #FFF;
+  .read-only {
+    color: #666;
+  }
+
+  .editable {
+    color: $bgcolor-blue;
+  }
+}
+
+/*---------------Search result List -----------------*/
+
+.searchResultlist {
+  //background: ;
+  // search Result
+  .resulttable {
+    margin: 0 auto;
+    width: 90%;
+    tr {
+      border-top: 1px solid #CCC;
     }
-
-
-    /*------------ Recipe detail - view -------------------*/
-
-    .viewrecipe {
-      background: #FFF;
-      .title-bg {
-        background: $bgcolor-blue;
-        color: #FFF;
-        height: 150px;
-        width: 100%;
-        h3 {
-          font-weight: 100;
-          color: #81d4fa;
-        }
-        .input-field label {
-          position: absolute;
-          top: 0.1rem;
-
-        }
-      }
-      .margin-left{
-        margin-left: 1rem;
-      }
-      .card {
-        padding: 0;
-      }
-      .card-title {
-        padding: 15px;
-      }
-      .card-content {
-        line-height: 34px;
-      }
+    //picture
+    td:nth-child(1) {
+      width: 25%;
     }
+    // recipe name
+    td:nth-child(2) {
+      width: 30%;
+      h6{
+        font-size: 1.6rem;
 
-    .swiper-container {
-      width: 400px;
-      height: 300px;
-    }
-
-    /*--------------------- user-details ---------------*/
-
-    .user-details {
-      background: #FFF;
-      .read-only {
-        color: #666;
-      }
-
-      .editable {
-        color: $bgcolor-blue;
-      }
-    }
-
-    /*---------------Search result List -----------------*/
-
-    .searchResultlist {
-      //background: ;
-      // search Result
-      .resulttable {
-        margin: 0 auto;
-        width: 90%;
-        tr {
-          border-top: 1px solid #CCC;
-        }
-        //picture
-        td:nth-child(1) {
-          width: 25%;
-        }
-        // recipe name
-        td:nth-child(2) {
-          width: 30%;
-          h6{
-            font-size: 1.6rem;
-
-            a:link{
-              text-decoration: underline;
-              padding-bottom: 10px;
-              color: $indicater-color;
-            }
-            a:hover{
-              color: $focus-color;
-            }
-            a:focus{
-              padding: 3px;
-              border: 1px solid $focus-color;
-            }
-          }
-        }
-        // rating
-        td:nth-child(3) {
-          width: 25%;
-        }
-        //author
-        td:nth-child(4) {
-          width: 20%;
-        }
-
-        img {
-          max-width: 110px;
-          height: auto;
-        }
-        // rating star color
-        i{
+        a:link{
+          text-decoration: underline;
+          padding-bottom: 10px;
           color: $indicater-color;
-          border: #000000;
         }
-        i .material-icons{
-
+        a:hover{
+          color: $focus-color;
         }
-
+        a:focus{
+          padding: 3px;
+          border: 1px solid $focus-color;
+        }
       }
+    }
+    // rating
+    td:nth-child(3) {
+      width: 25%;
+    }
+    //author
+    td:nth-child(4) {
+      width: 20%;
+    }
 
-      .recipe-link{
-
-
-      }
+    img {
+      max-width: 110px;
+      height: auto;
+    }
+    // rating star color
+    i{
+      color: $indicater-color;
+      border: #000000;
+    }
+    i .material-icons{
 
     }
 
-    /*------------ Recipe rating    ----------------*/
+  }
 
-    .addeditRecipeRating {
-      border-top: 1px solid #222;
-      //border-top: 1px solid $primary-color;
-      padding-top: 20px;
-      border-bottom: 1px solid #CCC;
-      textarea {
-        height: 5rem;
-      }
-    }
-    .star-rating {
-      display: inline;
-      color: $primary-color;
-      i {
-        padding-left: 15px;
-      }
-    }
+  .recipe-link{
 
-    .range-field {
-      //font-size: 1.2rem;
 
-      label {
-        padding: 5px;
-        font-size: 1.3rem;
-      }
-    }
+  }
 
-    .thumb {
-      margin-left: 16px !important;
-      padding: 1px 10px 3px 10px;
-      border: 1px solid $success-color-hover;
-      border-radius: 50%;
-      color: $success-color-hover;
-      font-size: 1.3rem;
-    }
+}
+
+/*------------ Recipe rating    ----------------*/
+
+.addeditRecipeRating {
+  border-top: 1px solid #222;
+  //border-top: 1px solid $primary-color;
+  padding-top: 20px;
+  border-bottom: 1px solid #CCC;
+  textarea {
+    height: 5rem;
+  }
+}
+.star-rating {
+  display: inline;
+  color: $primary-color;
+  i {
+    padding-left: 15px;
+  }
+}
+
+.range-field {
+  //font-size: 1.2rem;
+
+  label {
+    padding: 5px;
+    font-size: 1.3rem;
+  }
+}
+
+.thumb {
+  margin-left: 16px !important;
+  padding: 1px 10px 3px 10px;
+  border: 1px solid $success-color-hover;
+  border-radius: 50%;
+  color: $success-color-hover;
+  font-size: 1.3rem;
+}
 
