--- a/Server/public/views/searchRecipe.tpl.html
+++ b/Server/public/views/searchRecipe.tpl.html
@@ -108,18 +108,18 @@
     <!--teasers-->
     <div class="row">
         <div class="col s4">
-            <div class="card  orange lighten-3">
-                <div class="card-title" translate="TEASER_TITLE_NEW">Neues Rezept</div>
+            <div class="card  deep-orange-text lighten-3">
+                <div class="card-title deep-orange-text" translate="TEASER_TITLE_NEW">Dein Rezept</div>
                 <br/>
-
                 <div class="card-image">
                     <img src="pictures/food2_400.jpg">
                 </div>
                 <div class="card-content">
                     <p translate="TEASER_TITLE_NEW_TEXT">Registrierte Benutzer können ihre eigenen Rezepte erfassen</p>
+                    <p> Try out!</p>
                 </div>
                 <div class="card-action">
-                    <a class="btn" href="#/addRecipe" translate="BUTTON_CREATE">erfassen</a>
+                    <a class="btn deep-orange white-text" href="#/addRecipe" translate="BUTTON_CREATE">erfassen</a>
                 </div>
             </div>
         </div>
