--- a/Server/public/views/addeditRecipe.tpl.html
+++ b/Server/public/views/addeditRecipe.tpl.html
@@ -193,6 +193,7 @@
                                         <option>TL</option>
                                         <option>Prise</option>
                                         <option>Dose</option>
+                                        <option>Packung</option>
                                         <option>Gramm</option>
                                         <option>Kilo</option>
                                         <option>Liter</option>
