--- a/Server/public/views/searchRecipe.tpl.html
+++ b/Server/public/views/searchRecipe.tpl.html
@@ -7,6 +7,26 @@
             </div>
         </div>
     </div>
+    <!--teasers -->
+    <div class="row">
+        <div class="col s4">
+            <div class="card  deep-orange-text lighten-3">
+                <div class="card-title deep-orange-text" translate="TEASER_TITLE_NEW">Dein Rezept</div>
+                <br/>
+                <div class="card-image">
+                    <img src="pictures/food_teddy.jpg">
+                </div>
+                <div class="card-content">
+                    <p translate="TEASER_TITLE_NEW_TEXT">Registrierte Benutzer können ihre eigenen Rezepte erfassen.</p>
+                </div>
+                <div class="card-action">
+                    <a class="btn deep-orange white-text" href="#/addRecipe" translate="BUTTON_CREATE">Mitmachen</a>
+                </div>
+            </div>
+        </div>
+        <fb-recipe-teaser type="0" recipes="searchRecipeCtrl.recipes"></fb-recipe-teaser>
+        <fb-recipe-teaser type="1" recipes="searchRecipeCtrl.recipes"></fb-recipe-teaser>
+    </div>
     <div class="row">
         <div class="col s12 m12 l12 card" id="searchbox">
             <div class="col s6 l6">
@@ -22,7 +42,7 @@
                 <div class="switch">
                     <label>
                         {{ 'SEARCH_EXPAND_1' | translate }}
-                        <input type="checkbox"
+                        <input type="checkbox" checked = "checked"
                                ng-model="searchRecipeCtrl.recipeFilter.showSearchOptions">
                         <span class="lever"></span>
                         {{ 'SEARCH_EXPAND_2' | translate }}
@@ -104,26 +124,5 @@
                                       recipe-filter="searchRecipeCtrl.recipeFilter"></fb-search-resultlist>
             </div>
         </div>
-    </div>
-    <!--teasers-->
-    <div class="row">
-        <div class="col s4">
-            <div class="card  deep-orange-text lighten-3">
-                <div class="card-title deep-orange-text" translate="TEASER_TITLE_NEW">Dein Rezept</div>
-                <br/>
-                <div class="card-image">
-                    <img src="pictures/food2_400.jpg">
-                </div>
-                <div class="card-content">
-                    <p translate="TEASER_TITLE_NEW_TEXT">Registrierte Benutzer können ihre eigenen Rezepte erfassen</p>
-                    <p> Try out!</p>
-                </div>
-                <div class="card-action">
-                    <a class="btn deep-orange white-text" href="#/addRecipe" translate="BUTTON_CREATE">erfassen</a>
-                </div>
-            </div>
-        </div>
-        <fb-recipe-teaser type="0" recipes="searchRecipeCtrl.recipes"></fb-recipe-teaser>
-        <fb-recipe-teaser type="1" recipes="searchRecipeCtrl.recipes"></fb-recipe-teaser>
     </div>
 </div>
